--- a/IFE_Part1_task1/task1_1_1.html
+++ b/IFE_Part1_task1/task1_1_1.html
@@ -38,27 +38,25 @@
 	<dl>
 	<dt><h2>图片</h2></dt>
 	<dd>好看的图片</dd>
-	<dd><img src="file:///C:/Users/Administrator/Desktop/mdn/bookmark-favicon.png" border="1"></dd>
+	<dd><img src="https://mdn.mozillademos.org/files/12351/bookmark-favicon.png" border="1"></dd>
 	<dd>好看的图片</dd>
-	<dd><img src="file:///C:/Users/Administrator/Desktop/mdn/bookmark-favicon.png" border="1"></dd>
+	<dd><img src="https://mdn.mozillademos.org/files/12351/bookmark-favicon.png" border="1"></dd>
 	<dd>好看的图片</dd>
-	<dd><img src="file:///C:/Users/Administrator/Desktop/mdn/bookmark-favicon.png" border="1"></dd>
+	<dd><img src="https://mdn.mozillademos.org/files/12351/bookmark-favicon.png" border="1"></dd>
 	<dd>好看的图片</dd>
-	<dd><img src="file:///C:/Users/Administrator/Desktop/mdn/bookmark-favicon.png" border="1"></dd>
+	<dd><img src="https://mdn.mozillademos.org/files/12351/bookmark-favicon.png" border="1"></dd>
 	<dd>好看的图片</dd>
-	<dd><img src="file:///C:/Users/Administrator/Desktop/mdn/bookmark-favicon.png" border="1"></dd>
+	<dd><img src="https://mdn.mozillademos.org/files/12351/bookmark-favicon.png" border="1"></dd>
 	<dd>好看的图片</dd>
-	<dd><img src="file:///C:/Users/Administrator/Desktop/mdn/bookmark-favicon.png" border="1"></dd>
+	<dd><img src="https://mdn.mozillademos.org/files/12351/bookmark-favicon.png" border="1"></dd>
 	<dd>好看的图片</dd>
-	<dd><img src="file:///C:/Users/Administrator/Desktop/mdn/bookmark-favicon.png" border="1"></dd>
+	<dd><img src="https://mdn.mozillademos.org/files/12351/bookmark-favicon.png" border="1"></dd>
 	<dd>好看的图片</dd>
-	<dd><img src="file:///C:/Users/Administrator/Desktop/mdn/bookmark-favicon.png" border="1"></dd>
+	<dd><img src="https://mdn.mozillademos.org/files/12351/bookmark-favicon.png" border="1"></dd>
 	<dd>好看的图片</dd>
-	<dd><img src="file:///C:/Users/Administrator/Desktop/mdn/bookmark-favicon.png" border="1"></dd>
+	<dd><img src="https://mdn.mozillademos.org/files/12351/bookmark-favicon.png" border="1"></dd>
 	<dd>好看的图片</dd>
-	<dd><img src="file:///C:/Users/Administrator/Desktop/mdn/bookmark-favicon.png" border="1"></dd>
-	<dd>好看的图片</dd>
-	<dd><img src="file:///C:/Users/Administrator/Desktop/mdn/bookmark-favicon.png" border="1"></dd>	
+	<dd><img src="https://mdn.mozillademos.org/files/12351/bookmark-favicon.png" border="1"></dd>
 	</dl>
 	<h2>最后一篇文章一级标题</h2>
 	<h2>文章二级标题</h2>
@@ -144,8 +142,5 @@
 	      <p>版权所有©</p>
 	    </footer>
 	</aside>
-
-
-
 </body>
 </html>
