--- a/IFE_Part1_task1/task1_1_1.html
+++ b/IFE_Part1_task1/task1_1_1.html
@@ -22,13 +22,13 @@
 	<p>换行了</p>
 	<p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了</p>
 	<p>这是一个很长很长的段落，这是一个很长很长的段落，<a href="http://ife.baidu.com">这里有一个链接链接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落，<strong>这里有个粗体字</strong>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。</p>
-	<img src="file:///C:/Users/Administrator/Desktop/mdn/bookmark-favicon.png">
+	<img src="https://mdn.mozillademos.org/files/12351/bookmark-favicon.png">
 	<h2>另一篇文章的一级标题</h2>
 	<h2>文章二级标题</h2>
 	<p>文章作者 文章发布时间</p>
 	<p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了。</p>
 	<p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，<strong>这里有个粗体字</strong>这是一个很长很长的段落，这是一个很长很长的段落，<a href="http://ife.baidu.com" target="_blank">这里有一个链接点击之后打开新窗口链接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。</p>
-	<img src="file:///C:/Users/Administrator/Desktop/mdn/bookmark-favicon.png">
+	<img src="https://mdn.mozillademos.org/files/12351/bookmark-favicon.png">
 	<ul>
 		<li>列表项目一</li>
 		<li>列表项目二</li>
